test/end-to-end/parse-errors/import-file-missing-type.crow
import
	./a.txt as text
